lab1/Test/L1-A-3-70.output
Error Type A at Line 1
Error Type A at Line 7
Error Type A at Line 7
